# NoteApp

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
NoteApp/: build.sh  requirements.txt  settings.py  urls.py  vercel.json
NoteApp/NoteApp/: settings.py  urls.py
NoteApp/notes/: admin.py  forms.py  models.py  urls.py  views.py
NoteApp/notes/migrations/: 0001_initial.py  0002_alter_note_note_text.py  0002_alter_note_user.py  0002_category.py  0002_remove_note_edit_dates.py  0002_remove_note_images_note_img_delete_image.py  0003_note_doc.py  0003_note_edit_dates.py  0004_alter_category_options_alter_note_category.py  0004_image_remove_note_img_alter_note_add_date_and_more.py  0005_remove_note_images_note_img_delete_image.py  0006_alter_note_doc.py  0007_rename_doc_note_files_remove_note_img.py  0008_remove_note_files_notefile.py
NoteApp/user_login/: forms.py  views.py
notes/: forms.py  models.py  tests.py  urls.py  views.py
notes/migrations/: 0003_remove_category_note_note_category.py  0005_note_allow_edits.py  0006_reminder.py  0007_reminder_note.py  0008_alter_reminder_remind_date.py  0009_reminder_user.py  0010_category_name_pl.py  0011_notification_message_pl.py  0012_note_edit_authors.py  0013_alter_note_category.py
notes/templates/notes/: add_note.html  base.html  edit_profile.html  error.html  index.html  notifications.html  profile.html  reminders.html  show.html  show_notes.html  stats.html
user_login/: views.py
user_login/templates/registration/: login.html
user_login/templates/user_login/: register.html
(+17 files in other folders)
