[tool.poetry]
name = "noteapp"
version = "0.1.0"
description = ""
authors = ["Grzegorz Boroń"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}